# mailman

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  skills-lock.json
.github/workflows/: bundle.yml
assets/icons/: README.md  icon.icns
src/: app.rs  app_support.rs  domain.rs  main.rs  models.rs  request_body.rs  storage.rs  tests.rs
src/app/: mod.rs
src/app/ui/: auth.rs  dialogs.rs  env_panel.rs  mod.rs  request.rs  response.rs  shared.rs  sidebar.rs  status.rs  theme.rs  toolbar.rs
src/domain/: core.rs  http.rs  persistence.rs  security.rs
src/domain/imports/: mod.rs  postman.rs
