[package]
name = "delivery-man"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
directories = "5.0.1"
eframe = "0.33.0"
flate2 = "1.1.9"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rusty-leveldb = "4.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
walkdir = "2.5.0"
