[package]
name = "mailman"
version = "0.3.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
directories = "5.0.1"
eframe = "0.33.0"
flate2 = "1.1.9"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rfd = "0.15.2"
rusty-leveldb = "4.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
walkdir = "2.5.0"

[package.metadata.packager]
product-name = "Mailman"
identifier = "com.mailman.mailman"
category = "DeveloperTool"
description = "A lightweight, offline-first API client."
long-description = "Mailman is a lightweight, offline-first API client for local request workflows."
before-packaging-command = "cargo build --release"
formats = ["app", "dmg", "deb", "wix", "nsis"]
out-dir = "dist/packager"
icons = [
  "assets/icons/32x32.png",
  "assets/icons/128x128.png",
  "assets/icons/128x128@2x.png",
  "assets/icons/icon.ico",
  "assets/icons/icon.icns",
]
